--- a/assets/css/custom/custom.css
+++ b/assets/css/custom/custom.css
@@ -44,3 +44,30 @@ body {
 .colortest {
         background-color: 000;
 }
+
+.hello {
+        display:inline;
+}
+
+@media only screen and (max-width: 576px) {
+         .w-xs-50 {
+                 width:50%;
+         }  
+         
+         .form-group-xs {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-flex: 0;
+            -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+            -webkit-box-orient: horizontal;
+            -webkit-box-direction: normal;
+            -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            margin-bottom: 0;
+        }
+}
